# aoc-code

./: .gitignore  CMakeLists.txt  LICENSE
2022/: CMakeLists.txt
2022/01/: 22p01.cpp  CMakeLists.txt  makefile
2022/02/: CMakeLists.txt  puzzle-02.cpp
2022/03/: CMakeLists.txt  puzzle-03-2.cpp  puzzle-03.cpp
2022/04/: puzzle-04.cpp
2022/05/: puzzle-05.cpp
2022/06/: puzzle-06.cpp
2022/07/: puzzle-07.cpp
2022/08/: puzzle-08.cpp
2022/09/: puzzle-09-1.cpp  puzzle-09-2.cpp
2022/10/: puzzle-10-1.cpp  puzzle-10-2.cpp
2022/11/: p11-1.cpp  p11-2-example-check.cpp  p11-2.cpp
2022/12/: p12-1.cpp
2022/13/: p13-1.cpp  p13-2.cpp
2023/01/: p01-1.cpp  p1-2.cpp
2023/02/: p2-1.cpp  p2-2.cpp
2023/03/: p3-1.cpp  p3-2.cpp
2023/04/: p04-1.cpp  p4-2.cpp
2023/05/: p5-1.cpp  p5-2.cpp
2023/06/: p06-1.cpp  p6-1.cpp  p6-2.cpp
2023/07/: p07-1.cpp  p07-2.cpp
2023/08/: p08-1.cpp  p08-2.cpp
2023/09/: p09-1.cpp  p09-2.cpp
2023/10/: p10-1.cpp  p10-2.cpp
2023/11/: p11-1.cpp  p11-2.cpp
2023/12/: p12-1.cpp
2024/: .clang-format  CMakeLists.txt
2024/01/: CMakeLists.txt  p01.cpp
2024/02/: CMakeLists.txt  p02.cpp
2024/03/: CMakeLists.txt  p03.cpp
2024/04/: CMakeLists.txt  p04.cpp
2024/05/: CMakeLists.txt  p05.cpp
2024/06/: CMakeLists.txt  p06.cpp
2024/07/: CMakeLists.txt  p07.cpp
2024/08/: CMakeLists.txt  p08.cpp
2024/09/: CMakeLists.txt  p09.cpp
2024/10/: CMakeLists.txt  p10.cpp
2024/11/: CMakeLists.txt  p11.cpp
2024/lib/: CMakeLists.txt  aoc-lib.h
2025/: CMakeLists.txt
2025/01/: 25p01.cpp  CMakeLists.txt
2025/02/: 25p02.cpp  CMakeLists.txt
2025/03/: 25p03.cpp  CMakeLists.txt
2025/04/: 25p04.cpp  CMakeLists.txt
2025/05/: 25p05.cpp  CMakeLists.txt
2025/06/: 25p06.cpp  CMakeLists.txt
lib/: aoc-lib.cpp  aoc-lib.h
